# open-cryptography-course

./: .gitignore  README.md
session-1/: Readme.md  session-1-ex-solutions.md
session-1/benchmark/: Cargo.toml  Readme.md
session-1/benchmark/benches/: my_benchmark.rs
session-2/: Readme.md  encrypted.gpg  gpg-plaintext.txt
session-2/openssl-example/: Cargo.toml
session-2/openssl-example/src/: main.rs
session-3/: Readme.md
session-3/blake3-bench/: Cargo.toml
session-3/blake3-bench/benches/: my_benchmark.rs
session-3/blake3-bench/src/: lib.rs
session-3/cbc-mac-example/: Cargo.toml
session-3/cbc-mac-example/src/: main.rs
session-3/sha512-n-birthday/: Cargo.toml
session-3/sha512-n-birthday/benches/: my_benchmark.rs
session-3/sha512-n-birthday/src/: lib.rs
