[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false

[dependencies]
rsa = "0.7.2"
rsa-oaep-pss = "1.1"
rand = "0.8.5"
sha2 = "0.10.6"