[package]
name = "blake3-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = "1.3.3"
sha2 = "0.10.6"
sha3 = "0.10.6"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false