[package]
name = "sha512-n-birthday"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10.6"
hex-literal = "0.3.4"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false